--- a/Assets/css/estilos.css
+++ b/Assets/css/estilos.css
@@ -35,6 +35,7 @@ input:checked[type="checkbox"]:before{
     font-weight: 400;
     text-align: center;
     text-decoration: none;
+    color: #005eea;
 }
  
 hr{
@@ -50,8 +51,8 @@ hr{
 }
  
 .content{
-    max-width: 500px;
-    background: #fff;
+    max-width: 700px;
+    background: rgb(8, 28, 34);
     padding: 40px;
     font-size: 22px;
     margin: auto;
@@ -64,7 +65,7 @@ hr{
  
 .content:hover{
     transform: translate(-5px, -10px);
-    box-shadow: 10px 10px 20px -5px rgba(0, 0, 0, 0.40);
+    box-shadow: 10px 10px 20px -5px #005eea;
 }
  
 .tags{
@@ -76,8 +77,8 @@ hr{
     color: #fff;
     font-weight: 100;
     background-image: 
-        linear-gradient(45deg, #005eea, #005eea 32px, rgba(0,0,0,0) 32px),
-        linear-gradient(135deg, #005eea, #005eea 32px, rgba(0,0,0,0) 32px),
+        linear-gradient(45deg, #005eea, #005eea 50px, rgba(0,0,0,0) 32px),
+        linear-gradient(135deg, #005eea, #005eea 50px, rgba(0,0,0,0) 32px),
         linear-gradient(135deg, #005eea, #005eea);
     background-repeat: no-repeat;
     background-position: 100% 100%, 100% 100%, -32px 100%;
@@ -96,3 +97,9 @@ hr{
     top: -11px;
     left: 0;
 }
+p{
+    color: white;
+}
+p.centrado {
+    text-align: center;
+  }
