--- a/Assets/css/tipografia.css
+++ b/Assets/css/tipografia.css
@@ -13,43 +13,16 @@ a{
     color: white;
 } */
 .card-header-secondary{
-	background: #0E6655; 
-	/* box-shadow:  6px 6px 12px #4d4c4c,
-             -6px -6px 12px #ffffff; */
-    /* color: white; */
+	background: #0E6655; 	
 }
 .card-header-a{
 	background: #1F618D; 
-	/* box-shadow:  6px 6px 12px #4d4c4c,
-             -6px -6px 12px #ffffff; */
-    /* color: white; */
 }
 .btn-a{
     background: #1F618D; 
 }
-.card-header-b{
-	background: #3498DB; 
-	/* box-shadow:  6px 6px 12px #4d4c4c,
-             -6px -6px 12px #ffffff; */
-    /* color: white; */
-}
-.btn-b{
-    background: #3498DB; 
-} 
-.card-header-c{
-	background: #a04000; 
-	/* box-shadow:  6px 6px 12px #4d4c4c,
-             -6px -6px 12px #ffffff; */
-    /* color: white; */
-}
-.btn-c{
-    background: #a04000; 
-}
 .card-header-d{
 	background: #17202A; 
-	/* box-shadow:  6px 6px 12px #4d4c4c,
-             -6px -6px 12px #ffffff; */
-    /* color: white; */
 }
 .navbar-d{
     background: #17202A; 
@@ -57,3 +30,8 @@ a{
 .table-a{
     background: #1F618D; 
 }
+.fonfo-a{
+    background: #17202A;
+}
+
+
